tests/invalid/set_add_wrong_arg_count/main.py
def run_case() -> None:
    s: set[int] = {1, 2}
    s.add()


if __name__ == "__main__":
    run_case()
